--- a/demo/Example1.html
+++ b/demo/Example1.html
@@ -17,8 +17,11 @@
                     <tr><td>test</td></tr>
                 </tbody>
             </table>
-            <template data-load-when-ready>
-                <be-hive></be-hive>
+            <template onload=blow-dry-to-head>
+                <script>
+                    import 'be-bound/be-bound.js';
+                </script>
+                <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Indie+Flower>
             </template>
             <blow-dry></blow-dry>
         </template>
