--- a/demo/Example1.html
+++ b/demo/Example1.html
@@ -23,6 +23,9 @@
                 </script>
                 <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Indie+Flower>
             </template>
+            <template blow-dry>
+                <div> this is  a test</div>
+            </template>
             <blow-dry></blow-dry>
         </template>
     </my-ssr-web-component>
